--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html>
 	<head>
 	<meta charset="utf-8">
@@ -107,7 +107,7 @@
 					<div class="date-counter text-center">
 						<h2 style="font-size: 45px;">舒适，精准，思维特<strong class="color"> —— 打造私人牙医品牌！</strong></h2>
 						<h3>Your teeth !  Your dentist !<strong>  ——— Sweet Dental Clinic</strong></h3>
-						<p style="font-size: 25px;"><strong><i class="icon-phone"></i> 187 0007 8881 (微信)</strong></p>
+						<p style="font-size: 25px;"><strong><i class="icon-phone"></i> 全国咨询热线187 0007 8881 (同微信号)</strong></p>
 						<p style="font-size: 25px;"><strong><i class="icon-location4"></i> 陕西省西安市碑林区太白北路延康东巷</strong></p>
 						<!--p><a href="javascript:;" onClick="showQrcode()" class="btn btn-primary btn-lg btn-reg">马上预约</a></p-->
 					</div>
