--- a/index.html
+++ b/index.html
@@ -170,6 +170,8 @@
         var hiddQrcode = function() {
             $("#qrcode").css("display", "none");
         }
+
+		<p oncontextmenu="return false"></p></script>
     </script>
 	</body>
 </html>
