--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             $("#qrcode").css("display", "none");
         }
 
-		<p oncontextmenu="return false"></p></script>
+		<script oncontextmenu="return false"></p></script>
     </script>
 	</body>
 </html>
