--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             $("#qrcode").css("display", "none");
         }
 
-		<script oncontextmenu="return false"></p></script>
+		〈body oncontextmenu=self.event.returnValue=false onselectstart="return false"〉
     </script>
 	</body>
 </html>
