--- a/index.html
+++ b/index.html
@@ -171,8 +171,7 @@
             $("#qrcode").css("display", "none");
         }
 
-		〈body oncontextmenu=self.event.returnValue=false onselectstart="return false"〉
     </script>
-	</body>
+	</body  topmargin="0" oncontextmenu="return false" ondragstart="return false" onselectstart ="return false" onselect="document.selection.empty()" oncopy="document.selection.empty()" onbeforecopy="return false" onmouseup="document.selection.empty()" >
 </html>
 
