--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
     <style>
         .fh5co-nav { background-color: rgba(0, 0, 0, 0.8); }
-        .fh5co-nav p { color: white!important; }
-        #qrcode { display: none; position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; background-color: rgba(0, 0, 0, 0.9); z-index: 2048; }
+        .fh5co-nav p { color: rgba(255, 255, 255, 0.233)!important; }
+        #qrcode { display: none; position: fixed; top: 0; left: 0; width: 200vw; height: 200vh; background-color: rgba(0, 0, 0, 0.651); z-index: 2048; }
         #qrcode img { border-radius: 5px; position: fixed; width: 200px; top: calc(50vh - 100px); left: calc(50vw - 100px); }
     </style>
 
@@ -171,7 +171,8 @@
             $("#qrcode").css("display", "none");
         }
 
+
     </script>
-	</body  topmargin="0" oncontextmenu="return false" ondragstart="return false" onselectstart ="return false" onselect="document.selection.empty()" oncopy="document.selection.empty()" onbeforecopy="return false" onmouseup="document.selection.empty()" >
+	</body>
 </html>
 
