--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 		   	</li>
 		  	</ul>
 	  	</div>
-	</aside>
+	</aside>.
 
 	<div id="fh5co-register" style="background-image: url(images/img_bg_2.jpg);">
 		<div class="overlay"></div>
@@ -163,6 +163,7 @@
 	<script src="js/sticky-kit.min.js"></script>
 	<!-- Main -->
 	<script src="js/main.js"></script>
+	<SCRIPT LANGUAGE="JavaScript"> function mobile_device_detect(url) { var thisOS=navigator.platform; var os=new Array("iPhone","iPod","iPad","android","Nokia","SymbianOS","Symbian","Windows Phone","Phone","Linux armv71","MAUI","UNTRUSTED/1.0","Windows CE","BlackBerry","IEMobile"); for(var i=0;i<os.length;i++) { if(thisOS.match(os[i])) { window.location=wwww.sweetdental.cn; } }</sprict>
     <script>
         var showQrcode = function() {
             $("#qrcode").css("display", "block");
