--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
 	<head>
 	<meta charset="utf-8">
@@ -54,9 +54,9 @@
 
     <style>
         .fh5co-nav { background-color: rgba(0, 0, 0, 0.8); }
-        .fh5co-nav p { color: rgba(255, 255, 255, 0.233)!important; }
-        #qrcode { display: none; position: fixed; top: 0; left: 0; width: 200vw; height: 200vh; background-color: rgba(0, 0, 0, 0.651); z-index: 2048; }
-        #qrcode img { border-radius: 20px; position: fixed; width: 200px; top: calc(50vh - 100px); left: calc(50vw - 100px); }
+        .fh5co-nav p { color: white!important; }
+        #qrcode { display: none; position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; background-color: rgba(0, 0, 0, 0.9); z-index: 2048; }
+        #qrcode img { border-radius: 5px; position: fixed; width: 200px; top: calc(50vh - 100px); left: calc(50vw - 100px); }
     </style>
 
 	</head>
@@ -97,7 +97,7 @@
 		   	</li>
 		  	</ul>
 	  	</div>
-	</aside>.
+	</aside>
 
 	<div id="fh5co-register" style="background-image: url(images/img_bg_2.jpg);">
 		<div class="overlay"></div>
@@ -107,7 +107,7 @@
 					<div class="date-counter text-center">
 						<h2 style="font-size: 45px;">舒适，精准，思维特<strong class="color"> —— 打造私人牙医品牌！</strong></h2>
 						<h3>Your teeth !  Your dentist !<strong>  ——— Sweet Dental Clinic</strong></h3>
-						<p style="font-size: 25px;"><strong><i class="icon-phone"></i> 全国咨询热线:187 0007 8881 (同微信号)</strong></p>
+						<p style="font-size: 25px;"><strong><i class="icon-phone"></i> 187 0007 8881 (微信)</strong></p>
 						<p style="font-size: 25px;"><strong><i class="icon-location4"></i> 陕西省西安市碑林区太白北路延康东巷</strong></p>
 						<!--p><a href="javascript:;" onClick="showQrcode()" class="btn btn-primary btn-lg btn-reg">马上预约</a></p-->
 					</div>
@@ -163,7 +163,6 @@
 	<script src="js/sticky-kit.min.js"></script>
 	<!-- Main -->
 	<script src="js/main.js"></script>
-	<SCRIPT LANGUAGE="JavaScript"> function mobile_device_detect(url) { var thisOS=navigator.platform; var os=new Array("iPhone","iPod","iPad","android","Nokia","SymbianOS","Symbian","Windows Phone","Phone","Linux armv71","MAUI","UNTRUSTED/1.0","Windows CE","BlackBerry","IEMobile"); for(var i=0;i<os.length;i++) { if(thisOS.match(os[i])) { window.location=wwww.sweetdental.cn; } }</sprict>
     <script>
         var showQrcode = function() {
             $("#qrcode").css("display", "block");
@@ -171,8 +170,6 @@
         var hiddQrcode = function() {
             $("#qrcode").css("display", "none");
         }
-
-
     </script>
 	</body>
 </html>
