--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE HTML>
 <html>
-	<head>
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>思维特口腔医疗-专属私人牙医品牌</title>
@@ -8,12 +9,12 @@
 	<meta name="description" content="思维特口腔医疗官方网站" />
 	<meta name="keywords" content="思维特,口腔,医疗,sweet" />
 
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
@@ -21,7 +22,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -52,92 +53,123 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-    <style>
-        .fh5co-nav { background-color: rgba(0, 0, 0, 0.8); }
-        .fh5co-nav p { color: white!important; }
-        #qrcode { display: none; position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; background-color: rgba(0, 0, 0, 0.9); z-index: 2048; }
-        #qrcode img { border-radius: 5px; position: fixed; width: 200px; top: calc(50vh - 100px); left: calc(50vw - 100px); }
-    </style>
+	<style>
+		.fh5co-nav {
+			background-color: rgba(0, 0, 0, 0.8);
+		}
 
-	</head>
-	<body>
-		
+		.fh5co-nav p {
+			color: rgba(255, 255, 255, 0.233) !important;
+		}
+
+		#qrcode {
+			display: none;
+			position: fixed;
+			top: 0;
+			left: 0;
+			width: 200vw;
+			height: 200vh;
+			background-color: rgba(0, 0, 0, 0.651);
+			z-index: 2048;
+		}
+
+		#qrcode img {
+			border-radius: 20px;
+			position: fixed;
+			width: 200px;
+			top: calc(50vh - 100px);
+			left: calc(50vw - 100px);
+		}
+	</style>
+
+</head>
+
+<body>
+
 	<div class="fh5co-loader"></div>
-	
+
 	<div id="page">
-	<nav class="fh5co-nav" role="navigation">
-		<div class="top-menu">
+		<nav class="fh5co-nav" role="navigation">
+			<div class="top-menu">
+				<div class="container">
+					<div class="row">
+						<div class="col-xs-10">
+							<div id="fh5co-logo">
+								<img src="./my_images/logo.png" style="height: 80px;" title="思维特口腔医疗一您的牙齿！您的牙医！"
+									alt="Sweet Dental Clinic一Your tooth ! Your dentist !">
+							</div>
+						</div>
+						<div class="col-xs-2 text-right menu-1">
+							<ul>
+								<li class="btn-cta"><a href="javascript:;" onClick="showQrcode()"><span
+											style="font-size: 28px;">马上预约 Schedule Appointment</span></a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</nav>
+
+		<aside id="fh5co-hero" style="min-height: auto;">
+			<div class="flexslider">
+				<ul class="slides">
+					<li
+						style="background-image: url(http://12596534.s61i.faiusr.com/2/AD0ItuqABhACGAAgnOrxwwUosKrltgEwgA84lQY.jpg);">
+					</li>
+					<li
+						style="background-image: url(http://12596534.s61i.faiusr.com/2/AD0ItuqABhACGAAglurxwwUo8tfX-gEwgA84lQY.jpg);">
+					</li>
+					<li
+						style="background-image: url(http://12596534.s61i.faiusr.com/2/AD0ItuqABhACGAAgnOrxwwUosKrltgEwgA84lQY.jpg);">
+					</li>
+					<li
+						style="background-image: url(http://12596534.s61i.faiusr.com/2/AD0ItuqABhACGAAglurxwwUo8tfX-gEwgA84lQY.jpg);">
+					</li>
+				</ul>
+			</div>
+		</aside>.
+
+		<div id="fh5co-register" style="background-image: url(images/img_bg_2.jpg);">
+			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
-					<div class="col-xs-10">
-						<div id="fh5co-logo">
-                            <img src="./my_images/logo.png" style="height: 80px;" title="思维特口腔医疗一您的牙齿！您的牙医！" alt="Sweet Dental Clinic一Your tooth ! Your dentist !">
-                      	</div>
-					</div>
-					<div class="col-xs-2 text-right menu-1">
-						<ul>
-							<li class="btn-cta"><a href="javascript:;" onClick="showQrcode()"><span style="font-size: 28px;">马上预约</span></a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-	</nav>
-      
-	<aside id="fh5co-hero" style="min-height: auto;">
-		<div class="flexslider">
-			<ul class="slides">
-		   	<li style="background-image: url(http://12596534.s61i.faiusr.com/2/AD0ItuqABhACGAAgnOrxwwUosKrltgEwgA84lQY.jpg);">
-		   	</li>
-		   	<li style="background-image: url(http://12596534.s61i.faiusr.com/2/AD0ItuqABhACGAAglurxwwUo8tfX-gEwgA84lQY.jpg);">
-		   	</li>
-		   	<li style="background-image: url(http://12596534.s61i.faiusr.com/2/AD0ItuqABhACGAAgnOrxwwUosKrltgEwgA84lQY.jpg);">
-		   	</li>
-		   	<li style="background-image: url(http://12596534.s61i.faiusr.com/2/AD0ItuqABhACGAAglurxwwUo8tfX-gEwgA84lQY.jpg);">
-		   	</li>
-		  	</ul>
-	  	</div>
-	</aside>
-
-	<div id="fh5co-register" style="background-image: url(images/img_bg_2.jpg);">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 animate-box">
-					<div class="date-counter text-center">
-						<h2 style="font-size: 45px;">舒适，精准，思维特<strong class="color"> —— 打造私人牙医品牌！</strong></h2>
-						<h3>Your teeth !  Your dentist !<strong>  ——— Sweet Dental Clinic</strong></h3>
-						<p style="font-size: 25px;"><strong><i class="icon-phone"></i> 咨询热线：187 0007 8881 (同微信号)</strong></p>
-						<p style="font-size: 25px;"><strong><i class="icon-location4"></i> 陕西省西安市碑林区太白北路延康东巷</strong></p>
-						<!--p><a href="javascript:;" onClick="showQrcode()" class="btn btn-primary btn-lg btn-reg">马上预约</a></p-->
+					<div class="col-md-12 animate-box">
+						<div class="date-counter text-center">
+							<h2 style="font-size: 45px;">舒适，精准，思维特<strong class="color"> —— 打造私人牙医品牌！</strong></h2>
+							<h3>Your teeth ! Your dentist !<strong> ——— Sweet Dental Clinic</strong></h3>
+							<p style="font-size: 25px;"><strong><i class="icon-phone"></i> 全国咨询热线:187 0007 8881
+									(同微信号)</strong></p>
+							<p style="font-size: 25px;"><strong><i class="icon-location4"></i>
+									陕西省西安市碑林区太白北路延康东巷</strong></p>
+							<!--p><a href="javascript:;" onClick="showQrcode()" class="btn btn-primary btn-lg btn-reg">马上预约</a></p-->
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
 
-	<footer id="fh5co-footer" role="contentinfo">
-		<div class="overlay">
-			<div class="col-md-12 text-center">
-                <p></p>
-                <p>
-					<small class="block">因为专业，所以优越！</small>
-                    <br>
-					<small class="block">&copy; 2019 思维特口腔医疗-医院 版权所有</small>
-				</p>
+		<footer id="fh5co-footer" role="contentinfo">
+			<div class="overlay">
+				<div class="col-md-12 text-center">
+					<p></p>
+					<p>
+						<small class="block">因为专业，所以优越！</small>
+						<br>
+						<small class="block">&copy; 2019 思维特口腔医疗-医院 版权所有</small>
+					</p>
+				</div>
 			</div>
-		</div>
-	</footer>
+		</footer>
 	</div>
 
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 	</div>
-	
+
 	<div id="qrcode" onclick="hiddQrcode()" style="display: none;">
-        <img src="./my_images/qrcode.jpg">
-    </div>
-	
+		<img src="./my_images/qrcode.jpg">
+	</div>
+
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
@@ -163,14 +195,16 @@
 	<script src="js/sticky-kit.min.js"></script>
 	<!-- Main -->
 	<script src="js/main.js"></script>
-    <script>
-        var showQrcode = function() {
-            $("#qrcode").css("display", "block");
-        }
-        var hiddQrcode = function() {
-            $("#qrcode").css("display", "none");
-        }
-    </script>
-	</body>
-</html>
+	<script>
+		var showQrcode = function () {
+			$("#qrcode").css("display", "block");
+		}
+		var hiddQrcode = function () {
+			$("#qrcode").css("display", "none");
+		}
 
+
+	</script>
+</body>
+
+</html>
