--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
 						<div class="col-xs-2 text-right menu-1">
 							<ul>
 								<li class="btn-cta"><a href="javascript:;" onClick="showQrcode()"><span
-											style="font-size: 28px;">马上预约 Schedule Appointment</span></a></li>
+											style="font-size: 28px;">马上预约 
+											Schedule Appointment</span></a></li>
 							</ul>
 						</div>
 					</div>
