--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
 						<div class="col-xs-2 text-right menu-1">
 							<ul>
 								<li class="btn-cta"><a href="javascript:;" onClick="showQrcode()"><span
-											style="font-size: 28px;">马上预约 
-											Schedule Appointment</span></a></li>
+											style="font-size: 28px;">马上预约</span></a></li>
 							</ul>
 						</div>
 					</div>
@@ -138,10 +137,10 @@
 						<div class="date-counter text-center">
 							<h2 style="font-size: 45px;">舒适，精准，思维特<strong class="color"> —— 打造私人牙医品牌！</strong></h2>
 							<h3>Your teeth ! Your dentist !<strong> ——— Sweet Dental Clinic</strong></h3>
-							<p style="font-size: 25px;"><strong><i class="icon-phone"></i> 全国咨询热线:187 0007 8881
+							<p style="font-size: 25px;"><strong><i class="icon-phone"></i> TEL:全国咨询热线:187 0007 8881
 									(同微信号)</strong></p>
 							<p style="font-size: 25px;"><strong><i class="icon-location4"></i>
-									陕西省西安市碑林区太白北路延康东巷</strong></p>
+									Add:陕西省西安市碑林区太白北路延康东巷</strong></p>
 							<!--p><a href="javascript:;" onClick="showQrcode()" class="btn btn-primary btn-lg btn-reg">马上预约</a></p-->
 						</div>
 					</div>
