--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 					</li>
 				</ul>
 			</div>
-		</aside>.
+		</aside>
 
 		<div id="fh5co-register" style="background-image: url(images/img_bg_2.jpg);">
 			<div class="overlay"></div>
