--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 			<div class="flexslider">
 				<ul class="slides">
 					<li
-						style="background-image: url(http://12596534.s61i.faiusr.com/2/AD0ItuqABhACGAAgnOrxwwUosKrltgEwgA84lQY.jpg);">
+						style="background-image: url(images/img_bg_3.jpg);">
 					</li>
 					<li
 						style="background-image: url(http://12596534.s61i.faiusr.com/2/AD0ItuqABhACGAAglurxwwUo8tfX-gEwgA84lQY.jpg);">
