--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
 						style="background-image: url(images/img_bg_3.jpg);">
 					</li>
 					<li
-						style="background-image: url(http://12596534.s61i.faiusr.com/2/AD0ItuqABhACGAAglurxwwUo8tfX-gEwgA84lQY.jpg);">
+						style="background-image: url(images/img_bg_1.jpg);">
 					</li>
 					<li
-						style="background-image: url(http://12596534.s61i.faiusr.com/2/AD0ItuqABhACGAAgnOrxwwUosKrltgEwgA84lQY.jpg);">
+						style="background-image: url(images/img_bg_2.jpg);">
 					</li>
 					<li
-						style="background-image: url(http://12596534.s61i.faiusr.com/2/AD0ItuqABhACGAAglurxwwUo8tfX-gEwgA84lQY.jpg);">
+						style="background-image: url(images/img_bg_1.jpg);">
 					</li>
 				</ul>
 			</div>
