--- a/index.html
+++ b/index.html
@@ -114,22 +114,22 @@
 			<div class="flexslider">
 				<ul class="slides">
 					<li
-						style="background-image: url(images/img_bg_3.jpg);">
-					</li>
-					<li
 						style="background-image: url(images/img_bg_1.jpg);">
 					</li>
 					<li
 						style="background-image: url(images/img_bg_2.jpg);">
 					</li>
 					<li
-						style="background-image: url(images/img_bg_1.jpg);">
+						style="background-image: url(images/img_bg_3.jpg);">
+					</li>
+					<li
+						style="background-image: url(images/img_bg_4.jpg);">
 					</li>
 				</ul>
 			</div>
 		</aside>
 
-		<div id="fh5co-register" style="background-image: url(images/img_bg_2.jpg);">
+		<div id="fh5co-register" style="background-image: url(images/img_bg_background.jpg);">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
