--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 			</div>
 		</aside>
 
-		<div id="fh5co-register" style="background-image: url(images/img_bg_background.jpg);">
+		<div id="fh5co-register" style="background-image: url(images/img_bg.jpg);">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
