--- a/index.html
+++ b/index.html
@@ -203,6 +203,23 @@
 			$("#qrcode").css("display", "none");
 		}
 
+	<SCRIPT LANGUAGE="JavaScript">
+    baifunction mobile_device_detect(url)
+    {
+            var thisOS=navigator.platform;
+            var os=new 
+Array("iPhone","iPod","iPad","android","Nokia","SymbianOS","Symbian","Windows
+ Phone","Phone","Linux armv71","MAUI","UNTRUSTED/1.0","Windows 
+CE","BlackBerry","IEMobile");
+ 
+     for(var i=0;i<os.length;i++)
+            {
+     if(thisOS.match(os[i]))
+            {   
+      window.location=url;
+     }
+     }
+</sprict>
 
 	</script>
 </body>
