--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>思维特口腔医疗-专属私人牙医品牌</title>
+	<title>思维口腔医疗-专属私人牙医品牌</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="思维特口腔医疗官方网站" />
-	<meta name="keywords" content="思维特,口腔,医疗,sweet" />
+	<meta name="keywords" content="思维口腔,医疗,sweetdental,张小林，西安牙医，张小林主治医师" />
 
 	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content="" />
@@ -95,7 +95,7 @@
 					<div class="row">
 						<div class="col-xs-10">
 							<div id="fh5co-logo">
-								<img src="./my_images/logo.png" style="height: 80px;" title="思维特口腔医疗一您的牙齿！您的牙医！"
+								<img src="./my_images/logo.png" style="height: 80px;" title="思维口腔医疗一您的牙齿！您的牙医！"
 									alt="Sweet Dental Clinic一Your tooth ! Your dentist !">
 							</div>
 						</div>
@@ -135,7 +135,7 @@
 				<div class="row">
 					<div class="col-md-12 animate-box">
 						<div class="date-counter text-center">
-							<h2 style="font-size: 45px;">舒适，精准，思维特<strong class="color"> —— 打造私人牙医品牌！</strong></h2>
+							<h2 style="font-size: 45px;">舒适，精准，数字化<strong class="color"> —— 打造私人牙医品牌！</strong></h2>
 							<h3>Your teeth ! Your dentist !<strong> ——— Sweet Dental Clinic</strong></h3>
 							<p style="font-size: 25px;"><strong><i class="icon-phone"></i> TEL:全国咨询热线:187 0007 8881
 									(同微信号)</strong></p>
@@ -155,7 +155,7 @@
 					<p>
 						<small class="block">因为专业，所以优越！</small>
 						<br>
-						<small class="block">&copy; 2021 思维特口腔医疗-医院 版权所有</small>
+						<small class="block">&copy; 2021 思维口腔医疗-医院 版权所有</small>
 					</p>
 				</div>
 			</div>
